Add plugin to check for semantic versioning.

--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -180,5 +180,36 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>checks</id>
+            <activation>
+                <jdk>[1.7,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- Check for semantic versioning. -->
+                    <plugin>
+                        <groupId>com.github.siom79.japicmp</groupId>
+                        <artifactId>japicmp-maven-plugin</artifactId>
+                        <version>${version.plugin.japicmp}</version>
+                        <configuration>
+                            <skip>${japicmp.skip}</skip>
+                            <parameter>
+                                <oldVersionPattern>\d+\.\d+\.\d+</oldVersionPattern>
+                                <ignoreMissingClasses>true</ignoreMissingClasses>
+                            </parameter>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>cmp</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
