Include Byte Buddy version in module info.

--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -151,6 +151,7 @@
                 </executions>
                 <configuration>
                     <name>net.bytebuddy.agent</name>
+                    <version>${project.version}</version>
                     <multirelease>true</multirelease>
                     <packages>${packages.list}</packages>
                     <exports>${packages.list}</exports>
