--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,7 @@
                         <encoding>${project.build.sourceEncoding}</encoding>
                         <showWarnings>true</showWarnings>
                         <showDeprecation>true</showDeprecation>
+                        <compilerArgument>-Xlint:all,-options,-processing</compilerArgument>
                     </configuration>
                 </plugin>
                 <plugin>
