--- a/byte-buddy-gradle-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/build.gradle
@@ -17,11 +17,13 @@ if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
     dependencies {
         compile gradleApi()
         compile group: 'net.bytebuddy', name: 'byte-buddy', version: version
+        compileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
         testCompile gradleTestKit()
         testCompile group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
         testCompile(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
             exclude group: 'net.bytebuddy'
         }
+        testCompileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
     }
 } else {
     repositories {
@@ -30,11 +32,13 @@ if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
     dependencies {
         implementation gradleApi()
         implementation group: 'net.bytebuddy', name: 'byte-buddy', version: version
+        compileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
         testImplementation gradleTestKit()
         testImplementation group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
         testImplementation(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
             exclude group: 'net.bytebuddy'
         }
+        testCompileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
     }
 }
 
