--- a/byte-buddy-gradle-plugin/build.simple.gradle
+++ b/byte-buddy-gradle-plugin/build.simple.gradle
@@ -24,11 +24,13 @@ if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
         } else {
             logger.warn("${location.absolutePath} does not exist, can clean but not build project")
         }
+        compileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
         testCompile gradleTestKit()
         testCompile group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
         testCompile(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
             exclude group: 'net.bytebuddy'
         }
+        testCompileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
     }
 } else {
     repositories {
@@ -41,10 +43,12 @@ if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
         } else {
             logger.warn("${location.absolutePath} does not exist, can clean but not build project")
         }
+        compileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
         testImplementation gradleTestKit()
         testImplementation group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
         testImplementation(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
             exclude group: 'net.bytebuddy'
         }
+        testCompileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
     }
 }
