--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,6 +104,11 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-legacy-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-legacy-maven-
       - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
