Update internal Byte Buddy version.

--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
             <id>raphw</id>
             <name>Rafael Winterhalter</name>
             <email>rafael.wth@gmail.com</email>
-            <url>http://rafael.codes</url>
+            <url>https://rafael.codes</url>
             <roles>
                 <role>developer</role>
             </roles>
