Add Java 18 profiles.

--- a/pom.xml
+++ b/pom.xml
@@ -585,6 +585,22 @@
                 <bytebuddy.experimental>true</bytebuddy.experimental>
             </properties>
         </profile>
+        <!-- Runs the build with compatibility for Java 18 JVMs. -->
+        <profile>
+            <id>java18-compatibility</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <jdk>18</jdk>
+            </activation>
+            <properties>
+                <sourcecode.main.version>8</sourcecode.main.version>
+                <sourcecode.test.version>8</sourcecode.test.version>
+                <bytecode.main.version>8</bytecode.main.version>
+                <bytecode.test.version>8</bytecode.test.version>
+                <jacoco.skip>true</jacoco.skip>
+                <bytebuddy.experimental>true</bytebuddy.experimental>
+            </properties>
+        </profile>
         <!-- Builds using a byte code target for Java 6. -->
         <profile>
             <id>java6</id>
@@ -721,6 +737,18 @@
             <properties>
                 <bytecode.main.version>17</bytecode.main.version>
                 <bytecode.test.version>17</bytecode.test.version>
+                <spotbugs.skip>true</spotbugs.skip>
+            </properties>
+        </profile>
+        <!-- Builds using a byte code target for Java 18. -->
+        <profile>
+            <id>java18</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <bytecode.main.version>18</bytecode.main.version>
+                <bytecode.test.version>18</bytecode.test.version>
                 <spotbugs.skip>true</spotbugs.skip>
             </properties>
         </profile>
