--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,7 @@ jobs:
           distribution: adopt-hotspot
           architecture: x64
       - name: Build project
-        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
+        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }} -pl '!byte-buddy-gradle-plugin'
   hotspot-legacy:
     name: HotSpot (legacy)
     strategy:
