--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,7 +142,7 @@ jobs:
   coverage:
     name: Coverage
     runs-on: ubuntu-18.04
-    needs: [hotspot-ea, any-supported, hotspot-unsupported, hotspot-legacy]
+    needs: [hotspot-ea, hotspot-supported, hotspot-unsupported, hotspot-legacy, j9-supported]
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v2
