Reintroduce binary compatible method for method graph compiler.

--- a/byte-buddy-benchmark/pom.xml
+++ b/byte-buddy-benchmark/pom.xml
@@ -137,6 +137,7 @@
                                             <excludes>
                                                 <exclude>META-INF/MANIFEST.MF</exclude>
                                                 <exclude>**/module-info.class</exclude>
+                                                <exclude>**/NOTICE</exclude>
                                             </excludes>
                                         </filter>
                                     </filters>
