Attempt different distribution to avoid certificate error on unsupported JVMs.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
-          distribution: adopt-hotspot
+          distribution: zulu
           architecture: x64
           cache: maven
       - name: Build project
