--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,6 @@ jobs:
         with:
           java-version: 17-ea
           distribution: temurin
-          architecture: x64
           cache: maven
       - name: Install JDK and build project
         run: ./mvnw verify -Pjava17
@@ -78,7 +77,7 @@ jobs:
           architecture: x64
           cache: maven
       - name: Build project
-        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }} -pl '!byte-buddy-gradle-plugin'
+        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
   hotspot-legacy:
     name: HotSpot (legacy)
     strategy:
@@ -110,7 +109,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 8
-          distribution: adopt-hotspot
+          distribution: temurin
           architecture: x64
           cache: maven
       - name: Build project
@@ -124,7 +123,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 8
-          distribution: adopt-hotspot
+          distribution: temurin
           architecture: x64
           gpg-private-key: ${{ secrets.gpg_secret }}
       - name: Publish new version
