--- a/byte-buddy-android-test/pom.xml
+++ b/byte-buddy-android-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.11.21-SNAPSHOT</version>
+        <version>1.11.21</version>
     </parent>
 
     <artifactId>byte-buddy-android-test</artifactId>
