--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,27 +18,61 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          java-version: 17-ea
+          java-version: 18-ea
           distribution: temurin
           cache: maven
       - name: Install JDK and build project
-        run: ./mvnw verify -Pjava17
+        run: ./mvnw verify -Pjava18
         continue-on-error: false
-  any-supported:
+  hotspot-supported:
     name: Any (supported)
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-18.04, macOS-10.15, windows-2019]
-        java: [8, 11]
-        distribution: [temurin, adopt-openj9]
+        java: [8, 11, 17]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
-          distribution: ${{ matrix.distribution }}
+          distribution: temurin
+          architecture: x64
+          cache: maven
+      - name: Build project
+        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
+  j9-supported:
+    name: Any (supported)
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-18.04, macOS-10.15, windows-2019]
+        java: [8, 11]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: adopt-openj9
+          architecture: x64
+          cache: maven
+      - name: Build project
+        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
+  hotspot-unsupported:
+    name: HotSpot (unsupported)
+    strategy:
+      fail-fast: false
+      matrix:
+        java: [9, 10, 12, 13, 14, 15, 16]
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: zulu
           architecture: x64
           cache: maven
       - name: Build project
@@ -61,23 +95,6 @@ jobs:
           cache: maven
       - name: Build project
         run: ./mvnw verify "-Djapicmp.skip=true" -Pintegration -Pjava${{ matrix.java }}
-  hotspot-unsupported:
-    name: HotSpot (unsupported)
-    strategy:
-      fail-fast: false
-      matrix:
-        java: [9, 10, 12, 13, 14, 15, 16]
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
-        with:
-          java-version: ${{ matrix.java }}
-          distribution: zulu
-          architecture: x64
-          cache: maven
-      - name: Build project
-        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
   hotspot-legacy:
     name: HotSpot (legacy)
     strategy:
