--- a/byte-buddy-gradle-plugin/build.simple.gradle
+++ b/byte-buddy-gradle-plugin/build.simple.gradle
@@ -25,12 +25,14 @@ if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
             logger.warn("${location.absolutePath} does not exist, can clean but not build project")
         }
         compileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
+        compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: outerPom.properties.'version.utility.jsr305'
         testCompile gradleTestKit()
         testCompile group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
         testCompile(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
             exclude group: 'net.bytebuddy'
         }
         testCompileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
+        testCompileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: outerPom.properties.'version.utility.jsr305'
     }
 } else {
     repositories {
@@ -44,11 +46,13 @@ if (gradle.gradleVersion.startsWith("2.")) { // support legacy version
             logger.warn("${location.absolutePath} does not exist, can clean but not build project")
         }
         compileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
+        compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: outerPom.properties.'version.utility.jsr305'
         testImplementation gradleTestKit()
         testImplementation group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
         testImplementation(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
             exclude group: 'net.bytebuddy'
         }
         testCompileOnly group: 'com.google.code.findbugs', name: 'findbugs-annotations', version: outerPom.properties.'version.utility.findbugs'
+        testCompileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: outerPom.properties.'version.utility.jsr305'
     }
 }
