--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
   hotspot-ea:
     name: HotSpot (EA)
     runs-on: ubuntu-18.04
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
