--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -138,6 +138,7 @@ jobs:
     needs: [ coverage ]
     if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[release]')
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
           java-version: 8
@@ -146,7 +147,6 @@ jobs:
           gpg-private-key: ${{ secrets.gpg_secret }}
       - name: Publish new version
         run: |
-          git clone git@github.com:${{ github.repository }}.git .
           git config user.name "${{ github.event.head_commit.committer.name }}"
           git config user.email "${{ github.event.head_commit.committer.email }}"
           ./mvnw -B -s .mvn/release.settings.xml release:prepare release:perform -Drepository.url=https://${{ github.actor }}:${{ secrets.github_token }}@github.com/${{ github.repository }}.git -Dcentral.username=raphw -Dcentral.password=${{ secrets.central_password }} -Dgpg.passphrase=${{ secrets.gpg_passphrase }} -Dgpg.keyname=B4AC8CDC141AF0AE468D16921DA784CCB5C46DD5 -Dgradle.key=${{ secrets.gradle_key }} -Dgradle.secret=${{ secrets.gradle_secret }}
