[maven-release-plugin] prepare release byte-buddy-1.12.9

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.bytebuddy</groupId>
     <artifactId>byte-buddy-parent</artifactId>
-    <version>1.12.9-SNAPSHOT</version>
+    <version>1.12.9</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2014</inceptionYear>
@@ -135,7 +135,7 @@
         <connection>scm:git:${repository.url}</connection>
         <developerConnection>scm:git:${repository.url}</developerConnection>
         <url>${repository.url}</url>
-        <tag>HEAD</tag>
+        <tag>byte-buddy-1.12.9</tag>
     </scm>
 
     <dependencies>
