--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -163,6 +163,10 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>net.bytebuddy.build.Plugin$Engine$Default</mainClass>
                                 </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <forShade>sources-jar</forShade>
+                                    <manifestEntries/>
+                                </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                     <resource>META-INF/LICENSE</resource>
                                 </transformer>
